@@ -1,3 +1,15 @@
+New in master
+=============
+
+Features
+--------
+
+* New ``add_header_permalinks`` filter, for Sphinx-style header links
+  (Issue #2636)
+
+Bugfixes
+--------
+
 New in v7.8.5
 =============
 
